Font size for smaller phones

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 				font-family: 'Sedgwick Ave Display', cursive;
 			}
 
+			@media only screen and (max-device-width : 480px) {
+				.text {
+					font-swize:34pt;
+				}
+			}
+
 			/* cursor blinking */
 			.typed-cursor {
 		        opacity: 1;
