Use px value for font

--- a/index.html
+++ b/index.html
@@ -26,16 +26,18 @@
 				border-radius:1em;
 				background:rgba(0,0,0,0.4);
 				color:#EEE;
-				font-size:24pt;
+				font-size:24px;
 				text-align:center;
 				font-family: 'Sedgwick Ave Display', cursive;
 			}
 
+			/*
 			@media only screen and (max-device-width : 480px) {
 				.text {
-					font-swize:34pt;
+					font-size:30px;
 				}
 			}
+			*/
 
 			/* cursor blinking */
 			.typed-cursor {
