--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Schatzsuche</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<script type="text/javascript" src="typed.min.js"></script>
 		<style type="text/css">
 			/* background image */
@@ -48,7 +49,7 @@
 				}
 			}
 		</style>
-		<link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet"> 
+		<link href="https://fonts.googleapis.com/css?family=Sedgwick+Ave+Display" rel="stylesheet" /> 
 	</head>
 	<body>
 		<div class="text">
