--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 				background:url('background.jpg') no-repeat 95% 50%;;
 				background-size:cover;
 				background-color:#000;
+				display:flex;
+				align-items:center;
 			}
 
 			/* text box */
 			.text {
-				position:relative;
-				top:40%;
+				flex-grow:1;
 				margin:0 10%;
 				padding:1em;
 				border-radius:1em;
@@ -30,6 +31,12 @@
 				font-size:50px;
 				text-align:center;
 				font-family: 'Sedgwick Ave Display', cursive;
+			}
+
+			@media (max-width: 767px) {
+				.text {
+					font-size:30px;
+				}
 			}
 
 			/* cursor blinking */
